Closed Bug 334300 Opened 18 years ago Closed 18 years ago

nsHTMLEditor::InsertAsPlaintextQuotation uses quotesInPre uninitialized in a case that doesn't happen

Categories

(Core :: DOM: Editor, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 obsolete file)

this shouldn't happen, but i'd rather preinitialize
Attached patch init to false (obsolete) — Splinter Review
Attachment #218631 - Flags: superreview?(neil)
Attachment #218631 - Flags: review?(neil)
Attachment #218631 - Flags: superreview?(neil)
Attachment #218631 - Flags: superreview+
Attachment #218631 - Flags: review?(neil)
Attachment #218631 - Flags: review+
Comment on attachment 218631 [details] [diff] [review]
init to false

mozilla/editor/libeditor/html/nsHTMLDataTransfer.cpp 	1.120
Attachment #218631 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: