Bug 334300 nsHTMLEditor::InsertAsPlaintextQuotation uses quotesInPre uninitialized in a case that doesn't happen r=neil sr=neil